--- a/app/views/pages/dashboard2.html.erb
+++ b/app/views/pages/dashboard2.html.erb
@@ -5,9 +5,9 @@
 <div class="container">
   <div class="row w-100">
     <div class="display-name d-flex flex-column col-6 mt-4">
-      <h1 class= "welcome"><%= current_user.full_name %> </h1>
-      <p class="loc-info"> Vous êtes locataire depuis le <%= I18n.l(current_user.rentals[0].start_date,  format: '%d %B %y', locale: :'fr').capitalize %> </p>
-      <p class="loc-info"> Votre loyer est de <strong><%= current_user.rentals[0].loyer %>€</strong>  par mois </p>
+      <h1 class= "welcome">Bonjour, <%= current_user.full_name %> </h1>
+      <p class="loc-info"><i class="fas fa-calendar-check"></i> Vous êtes locataire depuis le <%= I18n.l(current_user.rentals[0].start_date,  format: '%d %B %y', locale: :'fr').capitalize %> </p>
+      <p class="loc-info"><i class="fas fa-money-check-alt"></i> Votre loyer est de <strong><%= current_user.rentals[0].loyer %>€</strong>  par mois </p>
     </div>
 
     <div class="col-4 offset-8">
