--- a/app/assets/stylesheets/components/_card_worker.scss
+++ b/app/assets/stylesheets/components/_card_worker.scss
@@ -6,6 +6,7 @@
   box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
   transition: all 0.3s;
   border-radius: 3px;
+  margin-bottom: 2rem !important;
 
   &:hover {
     box-shadow: 0 8px 17px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
@@ -53,15 +54,14 @@
 .worker-description {
   padding: 10px;
   height: 200px;
-  margin-left: 5px;
+  margin-left: 10px;
   width: 60%;
-  border-left: 2px solid #efefef;
 
   h2 {
     color: #515151;
     margin: 5px;
     padding-right: 30px;
-    padding-left: 10px;
+    padding-left: 5px;
     text-transform: uppercase;
     font-weight: 400;
     font-size: 22px;
@@ -69,7 +69,7 @@
   }
   h3 {
     margin: 0;
-    padding-left: 10px;
+    padding-left: 5px;
     color: #515151;
     font-weight: 500;
     font-size: 20px
@@ -78,16 +78,25 @@
   h5 {
     color: #515151;
     font-weight: 300;
-    padding-top: 10px;
+    padding-top: 3px;
     padding-left: 10px;
     margin: 0;
     font-size: 15px;
     font-weight: 300;
+    .fa-address-card {
+      padding-right: 8px;
+    }
+    .fa-envelope {
+      padding-right: 8px;
+    }
+    .fa-phone {
+      padding-right: 8px;
+    }
   }
 
   h4 {
-    margin: 0;
-    padding-left: 10px;
+    margin-bottom: 20px;
+    padding-left: 5px;
     color: #727272;
     text-transform: uppercase;
     font-weight: 500;
@@ -98,8 +107,8 @@
     font-size: 12px;
     line-height: 20px;
     color: #727272;
-    padding: 8px 0px 10px;
-    margin: 0;
+    padding: 8px 0px 5px;
+    margin-bottom: 0px;
     display:none;
   }
 
@@ -108,15 +117,16 @@
     border: 0;
     // background: #515151;
     border: 1px solid #d9d9d9;
-    padding: 8px 0px 10px;
+    padding: 5px 0px 5px;
     margin-bottom: 0px;
-    margin-top: 8px;
+    margin-top: 20px;
+    margin-left: -5px;
     width: 100%;
     font-family: inherit;
     transition: all 0.3s ease;
     font-weight: 400;
     border-radius: 3px;
-    font-size: 20px;
+    font-size: 18px;
 
     &:hover {
       border: 1px solid $dark-green;
