fixed navbar in show

--- a/app/views/incidents/show.html.erb
+++ b/app/views/incidents/show.html.erb
@@ -1,4 +1,4 @@
-<div class="container-fluid" style="margin-top: 90px;">
+<div class="container-fluid">
   <div class="incident-wrapper">
     <div class="incident-left">
       <div class="incident-left-upper">
