New photo for meta social 1200x63O

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,16 +8,16 @@
     <meta name="description" content="Homelib, Libérez vous des contraintes de votre appartement">
     <!-- Facebook meta -->
     <meta property="og:title" content="Home-Lib - Libérez vous des contraintes de votre appartement">
-    <meta property="og:image" content="homelib-card-facebook.jpg">
+    <meta property="og:image" content="homelib-card-social.jpg">
     <meta property="og:description" content="Homelib, Libérez vous des contraintes de votre appartement">
     <meta property="og:site_name" content="Homelib"/>
     <!-- Twitter meta -->
-    <meta name="twitter:card" content="homelib-card-facebook.jpg">
+    <meta name="twitter:card" content="homelib-card-social.jpg">
     <meta name="twitter:site" content="@homelib">
     <meta name="twitter:title" content="Home-Lib - Libérez vous des contraintes de votre appartement">
     <meta name="twitter:description" content="Home-Lib - Libérez vous des contraintes de votre appartement">
     <meta name="twitter:creator" content="@homelib">
-    <meta name="twitter:image:src" content="https://homelib.herokuapp.com/assets/homelib-card-facebook.jpg">
+    <meta name="twitter:image:src" content="https://homelib.herokuapp.com/assets/homelib-card-social.jpg">
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css">
 
