--- a/app/assets/stylesheets/pages/_dashboard2.scss
+++ b/app/assets/stylesheets/pages/_dashboard2.scss
@@ -244,7 +244,15 @@
 .destroy {
   flex: 0 0 50px;
   padding: 15px;
+
+  &:hover {
+    text-decoration: none;
+    font-size: larger;
+  }
+
+
 }
+
 
 // Container des cards incidents
 
