--- a/app/views/workers/_card_worker.html.erb
+++ b/app/views/workers/_card_worker.html.erb
@@ -32,7 +32,7 @@
     <% end %>
     <!-- Call To Action  -->
     <% if current_user.flat.user.workers.include?(worker) %>
-      <button class="btn btn-lg btn-info" data-toggle="modal" data-target="#exampleModal">Demander une intervention</button>
+      <button class="btn btn-lg btn-info" data-toggle="modal" data-target="#valid_incident_modal">Demander une intervention</button>
     <% else %>
       <button class="btn btn-lg btn-primary" style="background-color: #357376;" data-toggle="modal" data-target="#exampleModal">Demander une intervention</button>
     <% end %>
