--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,15 +7,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Homelib, Libérez vous des contraintes de votre appartement">
     <!-- Facebook meta -->
-    <meta property="og:title" content="Home-Lib - Libérez vous des contraintes de votre appartement">
+    <meta property="og:title" content="HomeLib - Libérez vous des contraintes de votre appartement">
     <meta property="og:image" content="homelib-card-social.jpg">
+    <meta property="og:image:type" content="image/jpg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:image:alt" content="Buildings pointing to the sky" />
     <meta property="og:description" content="Homelib, Libérez vous des contraintes de votre appartement">
     <meta property="og:site_name" content="Homelib"/>
     <!-- Twitter meta -->
     <meta name="twitter:card" content="homelib-card-social.jpg">
     <meta name="twitter:site" content="@homelib">
-    <meta name="twitter:title" content="Home-Lib - Libérez vous des contraintes de votre appartement">
-    <meta name="twitter:description" content="Home-Lib - Libérez vous des contraintes de votre appartement">
+    <meta name="twitter:title" content="HomeLib - Libérez vous des contraintes de votre appartement">
+    <meta name="twitter:description" content="HomeLib - Libérez vous des contraintes de votre appartement">
     <meta name="twitter:creator" content="@homelib">
     <meta name="twitter:image:src" content="https://homelib.herokuapp.com/assets/homelib-card-social.jpg">
 
