--- a/app/assets/stylesheets/pages/_dashboard2.scss
+++ b/app/assets/stylesheets/pages/_dashboard2.scss
@@ -40,6 +40,7 @@
 
   .loyers-content {
     max-height: 250px;
+    background-color: white;
     overflow: hidden;
     overflow-y: scroll;
   }
@@ -91,6 +92,7 @@
 
 .incident-history {
     width: 100%;
+
     margin-bottom: 40px;
 
     a{
@@ -125,6 +127,7 @@
   height: 120px;
   overflow: hidden;
   overflow-y: scroll;
+  background-color: white;
 }
 
 .incident-line {
@@ -192,14 +195,15 @@
 //container des pdf
 
 .right-el {
-  height: 210px;
+  height: 225px;
   border-radius: 5px;
 
 }
 
 .document-content {
-  height: 150px;
+  height: 163px;
   overflow: hidden;
+  background-color: white;
   overflow-y: scroll;
   box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.2);
 }
@@ -208,6 +212,7 @@
   height: 200px;
   overflow: hidden;
   overflow-y: scroll;
+  box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.2);
 
 }
 
