--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -67,10 +67,12 @@
 
 .card-title {
   color: $dark-green;
+
 }
 
 .card-body {
   min-height: 220px;
+  box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.2);
 }
 
 .card img {
