--- a/app/assets/stylesheets/components/_cards_incident.scss
+++ b/app/assets/stylesheets/components/_cards_incident.scss
@@ -8,6 +8,7 @@
   align-items: center;
   color: $dark-green;
   font-size: 24px;
+  background-color: white;
   transition: 0.3s background-color ease-out;
   // font-weight: bold;
   // text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
