add absolute path for image in meta

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
     <meta name="description" content="Homelib, Libérez vous des contraintes de votre appartement">
     <!-- Facebook meta -->
     <meta property="og:title" content="HomeLib - Libérez vous des contraintes de votre appartement">
-    <meta property="og:image" content="homelib-card-social.jpg">
+    <meta property="og:image" content="<%= image_url("homelib-card-social.jpg") %>">
     <meta property="og:image:type" content="image/jpg" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
@@ -16,12 +16,12 @@
     <meta property="og:description" content="Homelib, Libérez vous des contraintes de votre appartement">
     <meta property="og:site_name" content="Homelib"/>
     <!-- Twitter meta -->
-    <meta name="twitter:card" content="homelib-card-social.jpg">
+    <meta name="twitter:card" content="<%= image_url("homelib-card-social.jpg") %>">
     <meta name="twitter:site" content="@homelib">
     <meta name="twitter:title" content="HomeLib - Libérez vous des contraintes de votre appartement">
     <meta name="twitter:description" content="HomeLib - Libérez vous des contraintes de votre appartement">
     <meta name="twitter:creator" content="@homelib">
-    <meta name="twitter:image:src" content="https://homelib.herokuapp.com/assets/homelib-card-social.jpg">
+    <meta name="twitter:image:src" content="<%= image_url("homelib-card-social.jpg") %>">
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css">
 
