add meta og:type = website, og:locale = fr_FR

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
   <head>
     <title>Home-Lib | Libérez vous des contraintes de votre appartement</title>
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Homelib, Libérez vous des contraintes de votre appartement">
+    <meta name="description" content="Homelib, la solution numéro une de gestion localive digitalisée">
     <!-- Facebook meta -->
     <meta property="og:title" content="HomeLib - Libérez vous des contraintes de votre appartement">
-    <meta property="og:image" content="<%= image_url("homelib-card-social.jpg") %>">
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="<%= image_path("homelib-card-social.jpg") %>">
     <meta property="og:image:type" content="image/jpg" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:image:alt" content="Buildings pointing to the sky" />
-    <meta property="og:description" content="Homelib, Libérez vous des contraintes de votre appartement">
+    <meta property="og:description" content="Homelib, la solution numéro une de gestion localive digitalisée">
     <meta property="og:site_name" content="Homelib"/>
+    <meta property="og:locale" content="fr_FR">
     <!-- Twitter meta -->
-    <meta name="twitter:card" content="<%= image_url("homelib-card-social.jpg") %>">
+    <meta name="twitter:card" content="<%= image_path("homelib-card-social.jpg") %>">
     <meta name="twitter:site" content="@homelib">
     <meta name="twitter:title" content="HomeLib - Libérez vous des contraintes de votre appartement">
-    <meta name="twitter:description" content="HomeLib - Libérez vous des contraintes de votre appartement">
+    <meta name="twitter:description" content="Homelib, la solution numéro une de gestion localive digitalisée">
     <meta name="twitter:creator" content="@homelib">
     <meta name="twitter:image:src" content="<%= image_url("homelib-card-social.jpg") %>">
 
