--- a/app/views/incidents/show.html.erb
+++ b/app/views/incidents/show.html.erb
@@ -1,3 +1,5 @@
+<% page_heading "Finaliser votre incident" # title %>
+
 <div class="container-fluid">
   <div class="incident-wrapper">
     <div class="incident-left">
