--- a/app/views/pages/dashboard2.html.erb
+++ b/app/views/pages/dashboard2.html.erb
@@ -1,3 +1,5 @@
+<% page_heading "Bienvenu sur votre dashboard locataire" # title %>
+
 <div id="dashboard" class="flat-image">
   <%= cl_image_tag  @rental.photos.fourth.key, class:"d-block img-fluid",width: 1800, height: 550, crop: :fill %>
 </div>
