--- a/app/views/workers/index.html.erb
+++ b/app/views/workers/index.html.erb
@@ -1,3 +1,5 @@
+<% page_heading "Retrouver ici tous les réparateurs" # title %>
+
 <div class="container">
 <h1>Tous les réparateur de l'impossible !!</h1>
 
