--- a/app/views/incidents/create.html.erb
+++ b/app/views/incidents/create.html.erb
@@ -1,5 +1,5 @@
+<% page_heading "Déclarer un incident" # title %>
+
 <div class="container">
-
   <%= render 'form', incident: @incident, decision: @next_decision  %>
-
 </div>
