Add meta og:url with

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
     <!-- Facebook meta -->
     <meta property="og:title" content="HomeLib - Libérez vous des contraintes de votre appartement">
     <meta property="og:type" content="website" />
+    <meta property="og:url" content="<%= url_for(:only_path => false, :overwrite_params=>nil) %>">
     <meta property="og:image" content="<%= image_path("homelib-card-social.jpg") %>">
     <meta property="og:image:type" content="image/jpg" />
     <meta property="og:image:width" content="1200" />
