--- a/app/assets/stylesheets/components/_card_worker.scss
+++ b/app/assets/stylesheets/components/_card_worker.scss
@@ -40,6 +40,8 @@
   height: 200px;
   width: 40%;
   text-align: center;
+  background-size: cover;
+  border-radius: 3px;
 
   img {
     max-height: 200px;
