--- a/app/views/incidents/show.html.erb
+++ b/app/views/incidents/show.html.erb
@@ -3,47 +3,45 @@
     <div class="incident-left">
       <div class="incident-left-upper">
         <!-- Display the result with all incident informations -->
+        <div class="incident-delete">
+          <%= link_to incident_path(@incident), method: :delete, data: { confirm: "Are you sure?" }, remote: true do %>
+            <i class="far fa-trash-alt"></i>
+          <% end  %>
+        </div>
         <div class="incident-result">
-            <h1 style="text-align: center;">Déclaration de l'incident</h1>
-            <div class="incident-description">
-                  <!-- Date -->
-              <div class="incident-date d-flex">
-                <h4><i class="far fa-calendar-alt"><%= Date.today.strftime("%d.%m.%Y") %></i></h4>
-              </div>
-              <!-- Category -->
-              <div class="incident-category d-flex">
-                <h4><i class="fas fa-exclamation-triangle"><%= @incident.reparation %></i></h4>
-              </div>
-              <!-- Price -->
-              <div class="incident-price d-flex">
-                <h4><i class="fas fa-money-bill-wave"><%= @incident.tarif %></i></h4>
-              </div>
-              <!-- Responsability -->
-
-              <div class="incident-responsability d-flex">
-                <h4><i class="fas fa-gavel"><%= @incident.responsable %></i></h4>
-              </div>
-
-              <!-- Summary -->
-              <div class="incident-summary">
-                <h5><strong>Recapitulatif</strong></h5>
-                <% @resume.each do |t| %>
-                  <p class="reponse"><%= Incident::TREE[t][:label] %></p>
-                  <p class="question"><%= Incident::TREE[t][:next_question] %></p>
-                <% end %>
-              </div>
-
-                <%= link_to "Annuler", incident_path(@incident), method: :delete, :class => "btn btn-info mt-4 text-white", data: { confirm: "Are you sure?" } %>
-
+          <h1 style="text-align: center;">Déclaration de l'incident</h1>
+          <div class="incident-description">
+                <!-- Date -->
+            <div class="incident-date d-flex">
+              <i class="far fa-calendar-alt"></i><h4><%= Date.today.strftime("%d.%m.%Y") %></h4>
             </div>
+            <!-- Category -->
+            <div class="incident-category d-flex">
+              <i class="fas fa-exclamation-triangle"></i><h4><%= @incident.reparation %></h4>
+            </div>
+            <!-- Price -->
+            <div class="incident-price d-flex">
+              <i class="fas fa-money-bill-wave"></i><h4><%= @incident.tarif %></h4>
+            </div>
+            <!-- Responsability -->
+
+            <div class="incident-responsability d-flex">
+              <i class="fas fa-gavel"></i><h4><%= @incident.responsable %></h4>
+            </div>
+            <!-- <div> -->
+              <%#= link_to "Annuler", incident_path(@incident), method: :delete, :class => "btn btn-info mt-1 mb-1 text-white", data: { confirm: "Are you sure?" } %>
+            <!-- </div> -->
+            <!-- Summary -->
+            <div class="incident-summary">
+              <h5><strong>Recapitulatif</strong></h5>
+              <% @resume.each do |t| %>
+                <p class="reponse"><%= Incident::TREE[t][:label] %></p>
+                <p class="question"><%= Incident::TREE[t][:next_question] %></p>
+              <% end %>
+            </div>
+          </div>
         </div>
       </div>
-<!--
-      <div class="incident-left-down">
-
-
-        <p>Je déclare uniquement l'incident au propriètaire <i class="fas fa-arrow-right"></i></p>
-      </div> -->
     </div>
     <!-- Display the list of workers -->
     <div class="incident-right w-100">
