--- a/app/views/workers/_card_worker.html.erb
+++ b/app/views/workers/_card_worker.html.erb
@@ -34,7 +34,7 @@
     <% if current_user.flat.user.workers.include?(worker) %>
       <button class="btn btn-lg btn-info" data-toggle="modal" data-target="#valid_incident_modal">Demander une intervention</button>
     <% else %>
-      <button class="btn btn-lg btn-info" style="background-color: #357376; color: white;" data-toggle="modal" data-target="#valid_incident_modal">Demander une intervention</button>
+      <button class="btn btn-lg btn-info" style="background-color: #6ba8a9; color: white;" data-toggle="modal" data-target="#valid_incident_modal">Demander une intervention</button>
     <% end %>
 
     <!-- Avatar -->
