--- a/app/views/incidents/_form.html.erb
+++ b/app/views/incidents/_form.html.erb
@@ -1,4 +1,4 @@
- <div class="container d-flex col-8 offset-2" style="align-items: center;">
+ <div class="container col-8 offset-2" style="align-items: center;">
   <%= simple_form_for Incident.new do |f| %>
     <div>
     <%= f.input :answer, label: "#{decision[:question] unless decision[:question] == "Voulez-vous déclarer un incident ?"}", collection: decision[:answers], as: :radio_buttons %>
