--- a/app/assets/stylesheets/components/_card_worker.scss
+++ b/app/assets/stylesheets/components/_card_worker.scss
@@ -1,12 +1,13 @@
 .card-worker {
   position: relative;
+  max-width: 630px;
+  min-height: 227px;
+  margin: 0 auto 2rem;
   display: flex;
-  width: 100%;
   background: white;
   box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
   transition: all 0.3s;
   border-radius: 3px;
-  margin-bottom: 2rem !important;
 
   &:hover {
     box-shadow: 0 8px 17px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
@@ -36,12 +37,10 @@
 }
 
 .worker-photo {
-  padding: 0px;
-  height: 200px;
   width: 40%;
-  text-align: center;
   background-size: cover;
-  border-radius: 3px;
+  background-repeat: no-repeat;
+  background-position: center;
 
   img {
     max-height: 200px;
@@ -55,7 +54,6 @@
 }
 .worker-description {
   padding: 10px;
-  height: 200px;
   margin-left: 10px;
   width: 60%;
 
@@ -71,6 +69,7 @@
   }
   h3 {
     margin: 0;
+    margin-right: 30px;
     padding-left: 5px;
     color: #515151;
     font-weight: 500;
@@ -84,7 +83,7 @@
     padding-left: 10px;
     margin: 0;
     font-size: 15px;
-    font-weight: 300;
+
     .fa-address-card {
       padding-right: 8px;
     }
@@ -97,7 +96,7 @@
   }
 
   h4 {
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     padding-left: 5px;
     color: #727272;
     text-transform: uppercase;
@@ -106,33 +105,36 @@
   }
 
   p {
+    text-align: justify;
     font-size: 12px;
-    line-height: 20px;
     color: #727272;
     padding: 8px 0px 5px;
+    margin-right: 55px;
     margin-bottom: 0px;
-    display:none;
+    word-break: break-word;
   }
 
   button {
-    outline: 0;
     border: 0;
-    // background: #515151;
-    border: 1px solid #d9d9d9;
-    padding: 5px 0px 5px;
-    margin-bottom: 0px;
-    margin-top: 20px;
-    margin-left: -5px;
-    width: 100%;
+    padding: 5px 20px;
+    margin: 10px auto 0;
     font-family: inherit;
     transition: all 0.3s ease;
-    font-weight: 400;
     border-radius: 3px;
     font-size: 18px;
+
+    &.btn-other-worker {
+      background-color: #6ba8a9;
+      color: white;
+    }
 
     &:hover {
       border: 1px solid $dark-green;
       cursor: pointer;
+    }
+
+    &.btn-other-worker:hover {
+      background-color: $dark-green;
     }
   }
 
