--- a/app/views/workers/_card_worker.html.erb
+++ b/app/views/workers/_card_worker.html.erb
@@ -6,7 +6,7 @@
   </div>
   <% end %>
   <!-- Display star for renter for his owner's favorite workers -->
-  <% if current_user.rentals.present? && current_user.rentals.last.flat.user.workers.include?(worker)
+  <% if current_user.rentals.present? && current_user.flat.user.workers.include?(worker)
  %>
   <div class="card-worker-star">
     <div class="worker-favorite">
@@ -25,16 +25,16 @@
     <h5><i class="fas fa-address-card"></i><%= worker.address %></h5>
     <h5><i class="fas fa-envelope"></i><%= worker.email %></h5>
     <h5><i class="fas fa-phone"></i><%= worker.phone %></h5>
-    <% if worker.description && worker.description.size > 180 %>
-      <p><%= worker.description.first(180) %><span class="show">... <%= link_to "Lire la suite", "" %></span ><span class="hide"><%= worker.description.last(-180) %> <%= link_to "Lire moins", "" %></span></p>
+    <% if worker.description && worker.description.size > 80 %>
+      <p><%= worker.description.first(80) %><span class="show">... <%= link_to "Lire la suite", "" %></span ><span class="hide"><%= worker.description.last(-80) %> <%= link_to "Lire moins", "" %></span></p>
     <% else %>
       <p><%= worker.description %></p>
     <% end %>
     <!-- Call To Action  -->
-    <% if current_user.flat.user.workers.include?(worker) %>
-      <button class="btn btn-lg btn-info" data-toggle="modal" data-target="#valid_incident_modal">Demander une intervention</button>
+    <% if current_user.rentals.present? && current_user.flat.user.workers.include?(worker) %>
+      <button class="btn btn-lg btn-info btn-favorite-worker" data-toggle="modal" data-target="#valid_incident_modal">Demander une intervention</button>
     <% else %>
-      <button class="btn btn-lg btn-info" style="background-color: #6ba8a9; color: white;" data-toggle="modal" data-target="#valid_incident_modal">Demander une intervention</button>
+      <button class="btn btn-lg btn-info btn-other-worker" data-toggle="modal" data-target="#valid_incident_modal">Demander une intervention</button>
     <% end %>
 
     <!-- Avatar -->
