Add sweetAlert on Delete Incident

--- a/app/assets/stylesheets/components/_cards_incident.scss
+++ b/app/assets/stylesheets/components/_cards_incident.scss
@@ -93,6 +93,10 @@
   top: 21px;
   right: 4%;
 
+  #delete-incident-btn {
+    padding: 0;
+  }
+
   .fa-trash-alt {
     color: #357376;
     font-size: 17px;
