--- a/app/views/pages/_document_creation.html.erb
+++ b/app/views/pages/_document_creation.html.erb
@@ -1,19 +1,25 @@
+<% if current_user.documents.present? %>
   <% current_user.documents.each do |doc| %>
-  <div class="document-card">
-    <div class="icone">
-      <i class="fas fa-file-pdf"></i>
+    <div class="document-card">
+      <div class="icone">
+        <i class="fas fa-file-pdf"></i>
+      </div>
+      <div class="document-name">
+        <p class="m-0 p-1"><%= doc.name.capitalize %></p>
+      </div>
+      <div class="document-date">
+        <p class="m-0 p-1"><%= doc.date %></p>
+      </div>
+      <div class="telechargement">
+        <%= link_to("📥", cl_image_path(doc.file.key), class: "download" ) if doc.file.attached? %>
+      </div>
+      <div class="delete">
+        <%= link_to "🗑", document_path(doc), remote: true,  method: :delete, class: "destroy" %>
+      </div>
     </div>
-    <div class="document-name">
-      <p class="m-0 p-1"><%= doc.name.capitalize %></p>
-    </div>
-    <div class="document-date">
-      <p class="m-0 p-1"><%= doc.date %></p>
-    </div>
-    <div class="telechargement">
-      <%= link_to("📥", cl_image_path(doc.file.key), class: "download" ) if doc.file.attached? %>
-    </div>
-    <div class="delete">
-      <%= link_to "🗑", document_path(doc), remote: true,  method: :delete, class: "destroy" %>
-    </div>
-  </div>
   <% end %>
+<% else %>
+  <div class="document-card">
+    <p>Aucun Document Téléchargé</p>
+  </div>
+<% end %>
