--- a/app/views/pages/dashboard2.html.erb
+++ b/app/views/pages/dashboard2.html.erb
@@ -29,6 +29,7 @@
         </div>
         <div class="carac p-3">
           <h1>Coordonnées du Syndic</h1>
+          <p class="m-0"><i class="fas fa-user px-2"></i>  <%= @flat.syndic_name %></p>
           <p class="m-0"><i class="fas fa-phone px-2"> </i>  <%= @flat.syndic_phone %></p>
           <p class="m-0"><i class="fas fa-envelope-open-text px-2"></i>  <%= @flat.syndic_email %></p>
         </div>
@@ -60,16 +61,22 @@
         <div class="incident-history">
           <h1>Historique d'incidents</h1>
           <div class="incident-content">
-            <% @incidents.each do |incident| %>
-            <%= link_to incident do  %>
-            <div class="incident-line d-flex justify-content-between">
-              <p> <%=incident.category.capitalize%> </p>
-              <p> <%=incident.date.strftime("%d-%b-%y")%> </p>
-              <%= render 'incidents/incident_status', incident: incident %>
-              <p><%=  %></p>
-              <p><%= incident.tarif %></p>
-            </div>
-            <% end %>
+            <% if @incidents.present? %>
+              <% @incidents.each do |incident| %>
+                <%= link_to incident do  %>
+                <div class="incident-line d-flex justify-content-between">
+                  <p> <%=incident.category.capitalize%> </p>
+                  <p> <%=incident.date.strftime("%d-%b-%y")%> </p>
+                  <%= render 'incidents/incident_status', incident: incident %>
+                  <p><%=  %></p>
+                  <p><%= incident.tarif %></p>
+                </div>
+                <% end %>
+              <% end %>
+            <% else %>
+              <div class="incident-line">
+                <p> Aucun incident déclaré </p>
+              </div>
             <% end %>
           </div>
         </div>
