--- a/app/assets/stylesheets/pages/_dashboard2.scss
+++ b/app/assets/stylesheets/pages/_dashboard2.scss
@@ -109,13 +109,13 @@
 
 
   h1{
-    font-size: 22px;
+    font-size: 26px;
     color: #357376;
     text-align: center;
     border-radius: 5px 5px 0 0;
-    margin-bottom: 15px;
+    margin-bottom: 25px;
     border-bottom: 2px solid #357376;
-    padding: 10px 0;
+    padding-bottom: 15px;
     font-weight: bolder;
     letter-spacing: 1px;
   }
@@ -131,7 +131,7 @@
   height: 120px;
   overflow: hidden;
   overflow-y: scroll;
-  background-color: white;
+
 }
 
 .incident-line {
@@ -139,6 +139,7 @@
   align-items: center;
   box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.2);
   margin-bottom: 10px;
+  background-color: white;
 }
 
 .table-description {
@@ -156,13 +157,13 @@
 
 
   h1 {
-    font-size: 22px;
+    font-size: 26px;
     color: #357376;
     text-align: center;
     border-radius: 5px 5px 0 0;
     margin-bottom: 15px;
     border-bottom: 2px solid #357376;
-    padding: 10px 0;
+    padding-bottom: 15px;
     font-weight: bolder;
     letter-spacing: 1px;
   }
@@ -283,13 +284,13 @@
     // padding: 5px;
     // margin-bottom: 15px;
 
-    font-size: 22px;
+    font-size: 26px;
     color: #357376;
     text-align: center;
     border-radius: 5px 5px 0 0;
-    margin-bottom: 15px;
+    margin-bottom: 25px;
     border-bottom: 2px solid #357376;
-    padding: 10px 0;
+    padding-bottom: 15px;
     font-weight: bolder;
     letter-spacing: 1px;
   }
@@ -332,13 +333,13 @@ img.carousel-img {
 .carousel-wrapper {
   padding: 12px;
   h1 {
-    font-size: 22px;
+    font-size: 26px;
     color: #357376;
     text-align: center;
     border-radius: 5px 5px 0 0;
     margin-bottom: 15px;
     border-bottom: 2px solid #357376;
-    padding: 10px 0;
+    padding-bottom: 15px;
     font-weight: bolder;
     letter-spacing: 1px;
   }
