--- a/app/views/pages/_document_creation.html.erb
+++ b/app/views/pages/_document_creation.html.erb
@@ -1,7 +1,7 @@
 <% if current_user.documents.present? %>
   <% current_user.documents.each do |doc| %>
     <div class="document-card">
-      <div class="icone">
+      <div class="pdf">
         <i class="fas fa-file-pdf"></i>
       </div>
       <div class="document-name">
