--- a/app/assets/stylesheets/components/_cards_incident.scss
+++ b/app/assets/stylesheets/components/_cards_incident.scss
@@ -6,16 +6,16 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  color: $dark-green;
+  color: white;
   font-size: 24px;
-  background-color: white;
+  background-color: $hover-green;
   transition: 0.3s background-color ease-out;
   // font-weight: bold;
   // text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
   // border-radius: 50%;
   box-shadow: 2px 2px 8px rgba(0,0,0,0.2);
   &:hover {
-    opacity:0.4;
+    opacity:0.8;
     transition: 0.3s background-color ease;
     cursor: pointer;
   }
@@ -33,8 +33,8 @@
 
 }
 .icone {
-  padding: 5px;
-  margin-bottom: 10px;
+  padding: 10px;
+  filter: invert(1);
 }
 
 .cards {
